implemented services, entities, sql and controller for simple retrieval of events.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=Event Scheduler
-spring.datasource.url=jdbc:h2:mem:testdb
+
+#Flyway handles DB operations
+spring.jpa.hibernate.ddl-auto=none
+
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb;
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+
+# Flyway configuration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+logging.level.org.flywaydb.core=DEBUG
+spring.flyway.clean-on-validation-error=true
