made errors from endpoint consistent with API contract

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Event Scheduler
 
+#Don't expose stacktrace in API error messages - this would be set to never in product but could be enabled during dev
+server.error.include-stacktrace=never
+
 #Flyway handles DB operations
 spring.jpa.hibernate.ddl-auto=none
 
