--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com</groupId>
     <artifactId>EventScheduler</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>Event Scheduler</name>
     <description>Event Scheduler</description>
     <url/>
