--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=Event Scheduler
 #Don't expose stacktrace in API error messages - this would be set to never in product but could be enabled during dev
 server.error.include-stacktrace=never
 
+springdoc.swagger-ui.url=/openapi.yaml
+
 #Flyway handles DB operations
 spring.jpa.hibernate.ddl-auto=none
 
